--- a/typescript/two-fer/package.json
+++ b/typescript/two-fer/package.json
@@ -8,12 +8,8 @@
     "type": "git",
     "url": "https://github.com/exercism/xtypescript"
   },
-  "devDependencies": {
-    "@types/benchmark": "^1.0.31",
-    "ts-node": "^8.2.0"
-  },
+  "devDependencies": {},
   "scripts": {
-    "bench": "tsc --noEmit -p . && ts-node leap.bench.ts",
     "test": "tsc --noEmit -p . && jest --no-cache",
     "lint": "tsc --noEmit -p . && tslint \"*.ts?(x)\"",
     "lintci": "tslint \"*.ts?(x)\" --force"
@@ -21,7 +17,6 @@
   "dependencies": {
     "@types/jest": "^21.1.5",
     "@types/node": "^8.0.47",
-    "benchmark": "^2.1.4",
     "jest": "^21.2.1",
     "ts-jest": "^21.1.3",
     "tslint": "^5.8.0",
