Downloaded two-fer on Nim, beer song on Rust, updated space age on Haskell

--- a/haskell/space-age/package.yaml
+++ b/haskell/space-age/package.yaml
@@ -5,8 +5,7 @@ dependencies:
   - base
 
 library:
-  # this is commented out, since otherwise the Cabal file is broken
-  # exposed-modules: SpaceAge, Alternative
+  exposed-modules: SpaceAge
   source-dirs: src
   ghc-options: -Wall
   # dependencies:
