Typescript: updated RNA-transcription, downloaded Space Age

--- a/typescript/.vscode/settings.json
+++ b/typescript/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "Transcriptor"
-    ]
+        "Interop",
+        "Transcriptor",
+        "downlevel",
+        "tslib"
+    ],
+    "eslint.enable": true
 }
